hopefully will fix font size of nav on mobile

--- a/css/pagestyle.css
+++ b/css/pagestyle.css
@@ -38,6 +38,18 @@ div.main {
     footer{
         clear:both;
     }
+    
+
+
+}
+
+
+@media all and not (min-aspect-ratio: 4/3) {
+    nav ul{
+    font-size: 200%;
+    
+    }
+
 
 }
 
